# OpenStudio-CONTAM-Utilities

./: CMakeLists.txt  README.md  compinf.cpp  demomodel.cpp  osm2prj.cpp  resources.qrc  simplefitinf.cpp  surfinf.cpp
models/: AirflowNetwork3zVentNoAFN.osm
scripts/: osm2prj.rb
src/: demomodel.cpp  osm2prj.cpp  simplefitinf.cpp
